--- a/www/app/edit/template.html
+++ b/www/app/edit/template.html
@@ -1,32 +1,33 @@
 <div class="row">
     <div class="col-lg-offset-3 col-lg-6">
-        <form class="form-horizontal" #form="ngForm" >
+        <form class="form-horizontal" [formGroup]="form" >
             <div class="form-group">
                 <label for="name" class="col-lg-3 control-label">Name:</label>
                 <div class="col-lg-9">
                     <input type="text" class="form-control" id="name" placeholder="name"
-                           [(ngModel)]="model.name" name="name" required #name="ngModel"/>
-                    <div [hidden]="name.valid || name.pristine" class="alert alert-danger">Required</div>
+                            formControlName="name" />
+                    <div *ngIf="form.controls.name.errors" class="alert alert-danger">Required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="sex" class="col-lg-3 control-label" >Sex:</label>
                 <div class="col-lg-9">
                     <input maxlength="1" type="text" class="form-control" id="sex" placeholder="sex"
-                           [(ngModel)]="model.sex" name="sex" required #sex="ngModel"/>
-                    <div [hidden]="sex.valid || sex.pristine" class="alert alert-danger">Required</div>
+                           formControlName="sex" />
+                    <div *ngIf="form.controls.sex.errors" class="alert alert-danger">Required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="dob" class="col-lg-3 control-label">DOB:</label>
                 <div class="col-lg-9">
                     <input type="text" class="form-control" id="dob" placeholder="dob"
-                           [(ngModel)]="model.dob" name="dob" required #dob="ngModel"/>
-                    <div [hidden]="dob.valid || dob.pristine" class="alert alert-danger">Required</div>
+                           formControlName="dob" />
+                    <div *ngIf="form.controls.dob.hasError('required')" class="alert alert-danger">Required</div>
+                    <div *ngIf="form.controls.dob.hasError('invalidDate')" class="alert alert-danger">Invalid Date</div>
                 </div>
             </div>
-            <button *ngIf="contact._id.length === 0" (click)="add()" class="btn btn-primary pull-right" [disabled]="!form.form.valid"><span class="fa fa-plus"></span> Add</button>
-            <button *ngIf="contact._id.length > 0" (click)="save()" class="btn btn-primary pull-right" [disabled]="!form.form.valid"><span class="fa fa fa-floppy-o"></span> Save</button>
+            <button *ngIf="contact._id.length === 0" (click)="add()" class="btn btn-primary pull-right" [disabled]="!form.valid"><span class="fa fa-plus"></span> Add</button>
+            <button *ngIf="contact._id.length > 0" (click)="save()" class="btn btn-primary pull-right" [disabled]="!form.valid"><span class="fa fa fa-floppy-o"></span> Save</button>
             <button (click)="cancel()" class="btn btn-default pull-right"><span class="fa fa fa-ban"></span> Cancel</button>
         </form>
     </div>
