--- a/www/app/edit/template.html
+++ b/www/app/edit/template.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-9">
                     <input type="text" class="form-control" id="name" placeholder="name"
                             formControlName="name" />
-                    <div *ngIf="form.controls.name.errors" class="alert alert-danger">Required</div>
+                    <div *ngIf="form.controls.name.hasError('required')" class="alert alert-danger">Required</div>
                 </div>
             </div>
             <div class="form-group">
@@ -14,7 +14,7 @@
                 <div class="col-lg-9">
                     <input maxlength="1" type="text" class="form-control" id="sex" placeholder="sex"
                            formControlName="sex" />
-                    <div *ngIf="form.controls.sex.errors" class="alert alert-danger">Required</div>
+                    <div *ngIf="form.controls.sex.hasError('required')" class="alert alert-danger">Required</div>
                 </div>
             </div>
             <div class="form-group">
