All of the entry fields are using the textField component now

--- a/www/app/edit/template.html
+++ b/www/app/edit/template.html
@@ -2,23 +2,17 @@
     <div class="col-lg-offset-3 col-lg-6">
         <form class="form-horizontal" [formGroup]="form" >
             <text-field fieldLabel="Name:" formControlName="name" [errorMessage]="getNameError()"></text-field>
-            <div class="form-group">
-                <label for="sex" class="col-lg-3 control-label" >Sex:</label>
-                <div class="col-lg-9">
-                    <input maxlength="1" type="text" class="form-control" id="sex" placeholder="sex"
-                           formControlName="sex" />
-                    <div *ngIf="form.controls.sex.hasError('required')" class="alert alert-danger">Required</div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="dob" class="col-lg-3 control-label">DOB:</label>
-                <div class="col-lg-9">
-                    <input type="text" class="form-control" id="dob" placeholder="dob"
-                           formControlName="dob" />
-                    <div *ngIf="form.controls.dob.hasError('required')" class="alert alert-danger">Required</div>
-                    <div *ngIf="form.controls.dob.hasError('invalidDate')" class="alert alert-danger">Invalid Date</div>
-                </div>
-            </div>
+            <text-field fieldLabel="Sex:" formControlName="sex" [errorMessage]="getSexError()"></text-field>
+            <text-field fieldLabel="DOB:" formControlName="dob" [errorMessage]="getDobError()"></text-field>
+            <!--<div class="form-group">-->
+                <!--<label for="dob" class="col-lg-3 control-label">DOB:</label>-->
+                <!--<div class="col-lg-9">-->
+                    <!--<input type="text" class="form-control" id="dob" placeholder="dob"-->
+                           <!--formControlName="dob" />-->
+                    <!--<div *ngIf="form.controls.dob.hasError('required')" class="alert alert-danger">Required</div>-->
+                    <!--<div *ngIf="form.controls.dob.hasError('invalidDate')" class="alert alert-danger">Invalid Date</div>-->
+                <!--</div>-->
+            <!--</div>-->
             <button *ngIf="contact._id.length === 0" (click)="add()" class="btn btn-primary pull-right" [disabled]="!form.valid"><span class="fa fa-plus"></span> Add</button>
             <button *ngIf="contact._id.length > 0" (click)="save()" class="btn btn-primary pull-right" [disabled]="!form.valid"><span class="fa fa fa-floppy-o"></span> Save</button>
             <button (click)="cancel()" class="btn btn-default pull-right"><span class="fa fa fa-ban"></span> Cancel</button>
