--- a/www/app/edit/template.html
+++ b/www/app/edit/template.html
@@ -2,9 +2,16 @@
     <div class="col-lg-offset-3 col-lg-6">
         <form class="form-horizontal" [formGroup]="form" >
             <!-- formControlName is needed so the formBuilder.group() stuff knows what to bind to  -->
-            <text-field fieldLabel="Name:" formControlName="name" [ngFormControl]="form.controls.name" errorMessage="Name is required"></text-field>
-            <text-field fieldLabel="Sex:"  formControlName="sex" [ngFormControl]="form.controls.sex" errorMessage="Sex is required"></text-field>
-            <text-field fieldLabel="DOB:"  formControlName="dob" [ngFormControl]="form.controls.dob" [errorMessage]="getDobError()"></text-field>
+            <text-field fieldLabel="Name:" formControlName="name">
+                <div *ngIf="form.controls.name.errors" class="alert alert-danger">Name is required</div>
+            </text-field>
+            <text-field fieldLabel="Sex:"  formControlName="sex">
+                <div *ngIf="form.controls.sex.errors" class="alert alert-danger">Sex is required</div>
+            </text-field>
+            <text-field fieldLabel="DOB:"  formControlName="dob">
+                <div *ngIf="form.controls.dob.hasError('required')" class="alert alert-danger">DOB is required</div>
+                <div *ngIf="form.controls.dob.hasError('invalidDate')" class="alert alert-danger">DOB should be a date</div>
+            </text-field>
             <button *ngIf="contact._id.length === 0" (click)="add()" class="btn btn-primary pull-right" [disabled]="!form.valid"><span class="fa fa-plus"></span> Add</button>
             <button *ngIf="contact._id.length > 0" (click)="save()" class="btn btn-primary pull-right" [disabled]="!form.valid"><span class="fa fa fa-floppy-o"></span> Save</button>
             <button (click)="cancel()" class="btn btn-default pull-right"><span class="fa fa fa-ban"></span> Cancel</button>
