--- a/www/index.html
+++ b/www/index.html
@@ -6,29 +6,21 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/angular.css">
     <!-- 1. Load libraries -->
-    <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <!-- bootstrap js files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <!-- 2. Configure SystemJS -->
-    <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
-    <script>
-        System.import('app').catch(function(err){ console.error(err); });
-    </script>
 </head>
 
-<!-- 3. Display the application -->
+<!-- 2. Display the application -->
 <body>
 <my-app>Loading...</my-app>
+
+<!-- 3. Load bundle -->
+<script src="bundle.js"></script>
 </body>
 
 </html>
