NgRx/Store with Normalizr

--- a/www/app/edit/template.html
+++ b/www/app/edit/template.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-lg-12">
                     <ol>
-                        <li *ngFor="let phone of (phones)">
+                        <li *ngFor="let phone of (phones | async)">
                             {{phone.phone}}
                         </li>
                     </ol>
