--- a/www/app/edit/template.html
+++ b/www/app/edit/template.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" #top>
     <div class="col-lg-offset-3 col-lg-6">
         <form class="form-horizontal" [formGroup]="form" >
             <!-- formControlName is needed so the formBuilder.group() stuff knows what to bind to  -->
@@ -20,7 +20,7 @@
                     </text-field>
                 </div>
                 <div class="col-lg-2">
-                    <button (click)="addPhone()" class="btn btn-default pull-right" [disabled]="!phoneForm.controls['phone'].valid"><span class="fa fa-plus"></span> Add</button>
+                    <button #addPhone class="btn btn-default pull-right" [disabled]="!phoneForm.controls['phone'].valid"><span class="fa fa-plus"></span> Add</button>
                 </div>
                 <div class="col-lg-12">
                     <ol>
@@ -33,9 +33,9 @@
             </fieldset>
         </form>
         <div class="col-lg-12">
-            <button *ngIf="contact._id.length === 0" (click)="add()" class="btn btn-primary pull-right" [disabled]="!isValid()"><span class="fa fa-plus"></span> Add</button>
-            <button *ngIf="contact._id.length > 0" (click)="save()" class="btn btn-primary pull-right" [disabled]="!isValid()"><span class="fa fa fa-floppy-o"></span> Save</button>
-            <button (click)="cancel()" class="btn btn-default pull-right"><span class="fa fa fa-ban"></span> Cancel</button>
+            <button *ngIf="contact._id.length === 2" class="btn btn-primary pull-right" [disabled]="!isValid()"><span class="fa fa-plus"></span> Add</button>
+            <button *ngIf="contact._id.length > 2" class="btn btn-primary pull-right" [disabled]="!isValid()"><span class="fa fa fa-floppy-o"></span> Save</button>
+            <button class="btn btn-default pull-right"><span class="fa fa fa-ban"></span> Cancel</button>
         </div>
     </div>
 </div>
